# spanish

./: .eslint.config.js  .gitattributes  .gitignore  CODEOWNERS  Cargo.toml  Makefile  README.md  README_VERIFY.md  README_rebuild.md  build.gradle.kts  go.mod  gradlew  gradlew.bat  long form a1 grammar  long form a2 grammar  long form b1 grammar  long form b2 grammar  long form c1 grammar  long form c2 grammar  package.json  requirements.txt  settings.gradle.kts  verify_vocab.py
.curator/: regex.json
.github/: PULL_REQUEST_TEMPLATE.md
TamaleTown_Mobile_Release_Pack/: README_RELEASE.md
ci/: check.sh
codex_rebuilder/: README_rebuild.md  mix.exs
content/: grammar_1a_happy  grammar_a1_mad  grammar_a2_happy_and_mad  i dont know a1  list of grammar topics from a1-c2
curator/: rules.json  style_guide.md
reports/: verify.json  verify.txt
schemas/: lesson.schema.json  vocabulary.schema.json
scripts/: precommit-lint.sh
src/: conflicts.rs  io_utils.rs  main.rs  models.rs  normalize.rs
tamale-town-desktop-c2/: README.md
tamale-town-sidequests-photos/: README.md
tests/: conftest.py  test_classification.py  test_idempotent.py  test_ordering.py  test_parse_and_repair.py  test_schema_validation.py
tools/: README_repo_healer_prompts.md  __init__.py  codex_rebuilder.ts  conflicts.ts  coverage.py  curate.py  dedupe.py  export_bundles.py  fixCodexConflicts.ts  fix_curated.py  fix_merge_and_rebuild.mjs  generate.py  io.ts  lint_curated.py  merge.ts  models.py  models.ts  normalize.ts  promote_level.py  quick_check.sh  repo_healer.py  report.py  split_batches.py  (+3 more)
(+278 files in other folders)
