[package]
name = "codex_rebuilder"
version = "0.1.0"
edition = "2021"
authors = ["OpenAI Codex"]
description = "CLI to heal merge conflicts and emit canonical Spanish lessons and vocabulary"

[dependencies]
anyhow = "1"
ahash = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
json5 = "0.4"
once_cell = "1"
rayon = "1.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = "3"
slug = "0.1"
thiserror = "1"
walkdir = "2"
similar = "2"
blake3 = "1"
base64 = "0.21"

[dev-dependencies]
pretty_assertions = "1"
